Java WS sort of working